<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvstscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stscan"
            android:textColor="@color/bg_register"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvqrcontent"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_register"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btngoback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/goback"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />


    </LinearLayout>

</RelativeLayout>